fix(material): labels are visible correctly with firefox
OUI-2317

--- a/projects/oblique/src/styles/scss/material/_mat-form-field.scss
+++ b/projects/oblique/src/styles/scss/material/_mat-form-field.scss
@@ -41,9 +41,10 @@
 
 		.mat-form-field-label {
 			margin-top: 1px; // empiric value
-			line-height: 1;
-			overflow-x: clip;
-			overflow-y: visible;
+			mat-label {
+				display: inline-block;
+				padding-bottom: 1px;
+			}
 		}
 
 		.mat-form-field-suffix .mat-datepicker-toggle .mat-button-wrapper {
